feat: atualiza controllers e services de User e Favorite